// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - Peer - Filter Aggregate Group Component should apply the collapsed class to the .aggregate-group when collapse is true 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  collapsed={[Function Boolean]}
  cssReplacementRegex={[Function RegExp]}
  previewLimit={[Function Number]}
  searchEvent={[Function EventEmitter]}
  searchValue=""
  searching="false"
>
  <div
    class="aggregate-group collapsed"
    ng-reflect-klass="aggregate-group"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
        
        <div
          class="ml-2"
        >
          <fa-icon />
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
      </div>
    </div>
    
    <div
      class="aggregate-container"
    >
      
      
      
      <pf-filter-aggregate />
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should display 'select all' checkbox as checked when all items are selected 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should display 'select all' checkbox as un-checked when only some items are selected 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  previewLimit={[Function Number]}
>
  <div
    class="aggregate-group"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           
        </div>
      </div>
      <div
        class="header-right"
      >
        
        
        
      </div>
    </div>
    <div
      class="aggregate-container"
    >
      
      
    </div>
    
  </div>
</pf-filter-aggregate-group>
`;

exports[`Features - Peer - Filter Aggregate Group Component should show the Options Toggle when the number of aggregates is greater than the preview limit 1`] = `
<pf-filter-aggregate-group
  aggregateGroup={[Function Object]}
  aggregateGroupSelectionsToggled={[Function EventEmitter]}
  aggregateToggled={[Function EventEmitter]}
  cssReplacementRegex={[Function RegExp]}
  previewLimit={[Function Number]}
  searchEvent={[Function EventEmitter]}
  searchValue=""
  searching="false"
>
  <div
    class="aggregate-group"
    ng-reflect-klass="aggregate-group"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="aggregate-group-header"
    >
      <div
        class="header-left space-out-children-right"
      >
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
           MockLabel 
        </div>
        
      </div>
      <div
        class="header-right"
      >
        
        
        <div
          class="search au-btn-search-MockId"
          ng-reflect-klass="search"
          ng-reflect-ng-class="au-btn-search-MockId"
        >
          <fa-icon />
        </div>
      </div>
    </div>
    
    <div
      class="aggregate-container"
    >
      
      
      
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      <pf-filter-aggregate />
      
      
    </div>
    
    <div
      class="toggle-option-height"
    >
       Show 5 More 
      <fa-icon />
    </div>
  </div>
</pf-filter-aggregate-group>
`;
